# AuraKaleidos

./: .gitattributes  .gitignore  .gitmodules  README.md
FantasyAI/AliceOpenCV/OpenCVCXX/: .gitignore  01_demo_channel_exchange.cpp  02_demo_image_gray.cpp  03_demo_image_dajin_2value.cpp  04_demo_image_2value.cpp  CMakeLists.txt
FantasyAI/AliceOpenCV/OpenCVCXX/src/: main.cpp
FantasyAlgorithm/CXX/: CMakeLists.txt
FantasyAlgorithm/CXX/src/: L0003_longest-substring-without-repeating-characters.cc  L0005_longest-palindromic-substring.cc  L0019_remove-nth-node-from-end-of-list.cc  L0020_valid-parentheses.cc  L0021_merge-two-sorted-lists.cpp  L0026_remove-duplicates-from-sorted-array.cc  L0027_remove_element.cc  L0035_search-insert-position.cc  L0054_spiral-matrix.cc  L0054_spiral-matrix_01.cc  L0055_jump-game.cc  L0056_merge-intervals.cc  L0070_climbing-stairs.cc  L0070_climbing-stairs_02.cc  L0070_climbing-stairs_03.cc  L0079_word-search.cc  L0080_remove-duplicates-from-sorted-array-ii.cc  L0082_remove-duplicates-from-sorted-list-ii.cc  L0120_triangle.cc  L0121_best-time-to-buy-and-sell-stock.cc  L0122_best-time-to-buy-and-sell-stock-ii.cc  L0169_majority-element.cc  L0189_rotate-array.cc  L0238_product-of-array-except-self.cc  L0392_is-subsequence.cc  L0704_binary-search.cc  L1188_design-bounded-blocking-queue.cc
FantasyAlgorithm/CXX/src/sort/: BubbleSort.cc  InsertSort.cc  QuickSort.cc  SelectionSort.cc
FantasyAlgorithm/CXX/test/: test.cc
FantasyAlgorithm/CXX/test/backup/: test_cal_iou.cc
FantasyCXX/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
FantasyCXX/aura-auto-driving/include/: CMakeLists.txt
FantasyCXX/aura-auto-driving/src/kalman_filter/: KalmanCTRVFilter.h  KalmanCVFilter.cpp  KalmanFilter.cc  SquareRootKalmanFilter.h
FantasyCXX/aura-auto-driving/src/smoother/: QSQPSplineSmoother.h
FantasyCXX/aura-auto-driving/src/utils/: GatedHungarianMatcher.cpp
FantasyCXX/aura-auto-driving/test/: CMakeLists.txt  main.cpp
FantasyCXX/aura-config-parser/example/: .gitignore  main_demo.cpp
FantasyCXX/aura-config-parser/include/: ini_parser.h
FantasyCXX/aura-config-parser/script/: build_lightbufferc.sh
FantasyCXX/aura-cv/: .gitignore  CMakeLists.txt  README.md
FantasyCXX/aura-cv-old/: CMakeLists.txt
FantasyCXX/aura-cv-old/samples/: CMakeLists.txt  main.cpp
FantasyCXX/aura-cv-old/src/: CMakeLists.txt
FantasyCXX/aura-cv-old/src/core/: CMakeLists.txt
FantasyCXX/aura-cv-old/src/ops/: CMakeLists.txt
FantasyCXX/aura-cv-old/src/utils/: Allocator.cpp  GaussianUtils.cpp  GaussianUtils.h  bbox_util.cpp  image_util.cpp
FantasyCXX/aura-cv-old/test/: CMakeLists.txt
FantasyCXX/aura-cv-old/test/src/: main.cpp
FantasyCXX/aura-cv/cmake/: hexagon_toolchain.cmake  macros.cmake  xtensa_toolchain.cmake
FantasyCXX/aura-cv/configure/: configure.cmake
FantasyCXX/aura-cv/configure/cmake/: AuraConfig.cmake.in
FantasyCXX/aura-cv/configure/headers/: config.h.in  version.h.in
FantasyCXX/aura-cv/configure/mk/: Aura.mk.in
FantasyCXX/aura-cv/sample/: CMakeLists.txt
FantasyCXX/aura-cv/sample/examples/: CMakeLists.txt  README.md
FantasyCXX/aura-cv/sample/helper/: mage1_helper.hpp  opencv_helper.hpp
FantasyCXX/aura-cv/sample/nn/: CMakeLists.txt  README.md  main.cpp
FantasyCXX/aura-cv/sample/scripts/: build_and_run-android-nn.sh.in  build_and_run-android.sh.in  build_and_run-linux.sh.in  build_and_run-win.bat.in
FantasyCXX/aura-cv/scripts/cicd/: boost.sh  build_android.sh  build_android_cicd.sh  build_hexagon.sh  build_hexagon_cicd.sh  build_linux.sh  build_win.sh  build_win_docker.sh  generate_mage2_version.sh  get_mage2.py  init_devices.sh  (+7 more)
FantasyCXX/aura-cv/src/: CMakeLists.txt
FantasyCXX/aura-lightbuffer/: .gitignore  CMakeLists.txt  README.md  build.sh
FantasyCXX/aura-lightbuffer/example/: CMakeLists.txt  main.cpp  person.proto
FantasyCXX/aura-lightbuffer/script/: build_lightbufferc.sh
FantasyCXX/aura-lightbuffer/src/: CodeGenerator.h  CodeGeneratorCpp.cpp  CodeGeneratorCpp.h  CommonUtil.cpp  LightBufferC.cpp  LightBufferC.h  schema.cpp
FantasyCXX/aura-perfguard/: CMakeLists.txt
FantasyCXX/aura-perfguard/example/: CMakeLists.txt  main.cpp
FantasyCXX/aura-perfguard/test/: CMakeLists.txt
FantasyCXX/aura-utils/: CMakeLists.txt
FantasyCXX/aura-utils/src/: CMakeLists.txt
FantasyCXX/aura-utils/test/: CMakeLists.txt  main.cpp
FantasyCXX/aura-vision/: CMakeLists.txt
FantasyCXX/aura-vision-hpc/: CMakeLists.txt  README.md
FantasyCXX/aura-vision-hpc/examples/: CMakeLists.txt
FantasyCXX/aura-vision-hpc/src/: main.cc
FantasyCXX/aura-vision-hpc/test/: CMakeLists.txt
FantasyCXX/aura-vision-tools/: CMakeLists.txt
FantasyCXX/aura-vision-tools/codestyle/: .clang-format  FrewenCStyle.xml
FantasyCXX/aura-vision-tools/model_packer/: CMakeLists.txt
FantasyCXX/aura-vision-tools/opencv_compiler/: .gitignore  README.md  build.sh
FantasyCXX/aura-vision-tools/vast/: CMakeLists.txt  VisionVast.cpp  VisionVast.h  cpptest.cpp  main.cpp  main.py
FantasyCXX/aura-vision/android/: .gitignore  README.md  build.gradle  build.sh  build_local.sh  gradle.properties  settings.gradle
FantasyCXX/aura-vision/cmake/: configure_model.cmake  generate_model.cmake  merge_model.cmake
FantasyCXX/aura-vision/examples/: CMakeLists.txt  InfoPrinter.cpp  InfoPrinter.h  README.md  fileHelper.cpp  fileHelper.h  main_demo.cpp  vgui.cpp  vgui.h
FantasyCXX/aura-vision/src/: CMakeLists.txt  build_config.h.in
FantasyCXX/aura-vision/tools/: CMakeLists.txt
FantasyCXX/cmake/: config_init.cmake  logger.cmake  macro.cmake  utils.cmake
FantasyCXX/docs/: README.md
FantasyCXX/examples/: 01.demo_sizeof.cpp  CMakeLists.txt
FantasyCXX/examples/ini_parser/: CMakeLists.txt
FantasyCXX/examples/object_detection/: CMakeLists.txt
FantasyCXX/scripts/: README.md  build_local.sh  build_test.sh  download_thirdparty.sh
FantasyCXX/test/: CMakeLists.txt  README.md  main.cpp
FantasyCuda/: 01_hello_cuda.cu  02_hello-gpu.cu  03_hello-malloc.cu  04_demo_cuda_matadd.cu  05_demo_stride.cu  06_demo_error.cu  07_demo_matrix_add.cu  10_demo_matrix.cu  CMakeLists.txt
(+4025 files in other folders)
